--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
@@ -45,14 +43,22 @@
                     </graphic>
                 </Button>
 
+                <Button fx:id="btn_main_reveal_picture" mnemonicParsing="false" prefHeight="48.0" prefWidth="256.0"
+                        text="%action_reveal_picture">
+                    <graphic>
+                        <Glyph fontFamily="FontAwesome" icon="FILE_PICTURE_ALT"/>
+                    </graphic>
+                </Button>
+
             </children>
 
         </VBox>
-        <Pane layoutX="256.0" prefHeight="720.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0"
-              AnchorPane.leftAnchor="256.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Pane fx:id="pane_main_right" layoutX="256.0" prefHeight="720.0" prefWidth="1024.0"
+              AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="256.0" AnchorPane.rightAnchor="0.0"
+              AnchorPane.topAnchor="0.0">
             <children>
-                <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true"
-                           fx:id="iv_main_current_picture"/>
+                <ImageView fx:id="iv_main_current_picture" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true"
+                           preserveRatio="true" style="-fx-background-size: cover; -fx-background-repeat: no-repeat;"/>
             </children>
         </Pane>
 
