--- a/src/main/resources/PresentationView.fxml
+++ b/src/main/resources/PresentationView.fxml
@@ -5,45 +5,81 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171"
-            xmlns:fx="http://javafx.com/fxml/1">
-    <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1"
+            prefHeight="720.0"
+            prefWidth="1280.0"
+            xmlns="http://javafx.com/javafx/8.0.171">
+    <BorderPane AnchorPane.bottomAnchor="0.0"
+                AnchorPane.leftAnchor="0.0"
+                AnchorPane.rightAnchor="0.0"
                 AnchorPane.topAnchor="0.0">
         <bottom>
             <BorderPane BorderPane.alignment="CENTER">
                 <bottom>
-                    <JFXProgressBar fx:id="pb_pv_progress" prefHeight="16" prefWidth="1280.0"/>
+                    <JFXProgressBar fx:id="pb_pv_progress"
+                                    prefHeight="16"
+                                    prefWidth="1280.0" />
                 </bottom>
                 <left>
-                    <VBox prefHeight="180.0" prefWidth="640.0" BorderPane.alignment="TOP_LEFT" spacing="4">
+                    <VBox prefHeight="180.0"
+                          prefWidth="640.0"
+                          BorderPane.alignment="TOP_LEFT"
+                          spacing="4">
                         <padding>
-                            <Insets bottom="72" left="72" right="72"/>
+                            <Insets bottom="72"
+                                    left="72"
+                                    right="72" />
                         </padding>
                         <children>
-                            <Label fx:id="l_pv_name1" text="Player1"/>
-                            <HBox fx:id="hb_pv_score1" prefHeight="100.0" prefWidth="200.0" spacing="4"/>
-                            <HBox fx:id="hb_pv_countdown1" prefHeight="100.0" prefWidth="200.0" spacing="4"/>
+                            <Label fx:id="l_pv_name1"
+                                   text="Player1" />
+                            <HBox fx:id="hb_pv_score1"
+                                  prefHeight="100.0"
+                                  prefWidth="200.0"
+                                  spacing="4" />
+                            <HBox fx:id="hb_pv_countdown1"
+                                  prefHeight="100.0"
+                                  prefWidth="200.0"
+                                  spacing="4" />
                         </children>
                     </VBox>
                 </left>
                 <right>
-                    <VBox prefHeight="180.0" prefWidth="640.0" BorderPane.alignment="TOP_LEFT" spacing="4">
+                    <VBox prefHeight="180.0"
+                          prefWidth="640.0"
+                          BorderPane.alignment="TOP_LEFT"
+                          spacing="4">
                         <padding>
-                            <Insets bottom="72" left="72" right="72"/>
+                            <Insets bottom="72"
+                                    left="72"
+                                    right="72" />
                         </padding>
                         <children>
-                            <Label fx:id="l_pv_name2" alignment="TOP_RIGHT" prefWidth="640.0" text="Player2"
-                                   textAlignment="RIGHT"/>
-                            <HBox fx:id="hb_pv_score2" prefHeight="48.0" prefWidth="640.0" spacing="4"/>
-                            <HBox fx:id="hb_pv_countdown2" prefHeight="48.0" prefWidth="640.0" spacing="4"/>
+                            <Label fx:id="l_pv_name2"
+                                   alignment="TOP_RIGHT"
+                                   prefWidth="640.0"
+                                   text="Player2"
+                                   textAlignment="RIGHT" />
+                            <HBox fx:id="hb_pv_score2"
+                                  prefHeight="48.0"
+                                  prefWidth="640.0"
+                                  spacing="4" />
+                            <HBox fx:id="hb_pv_countdown2"
+                                  prefHeight="48.0"
+                                  prefWidth="640.0"
+                                  spacing="4" />
                         </children>
                     </VBox>
                 </right>
             </BorderPane>
         </bottom>
         <center>
-            <ImageView fx:id="iv_pv_picture" fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true"
-                       preserveRatio="true" BorderPane.alignment="CENTER"/>
+            <ImageView fx:id="iv_pv_picture"
+                       fitHeight="720.0"
+                       fitWidth="1280.0"
+                       pickOnBounds="true"
+                       preserveRatio="true"
+                       BorderPane.alignment="CENTER" />
         </center>
     </BorderPane>
 </AnchorPane>
