--- a/src/main/resources/PresentationView.fxml
+++ b/src/main/resources/PresentationView.fxml
@@ -6,80 +6,93 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1"
-            prefHeight="720.0"
-            prefWidth="1280.0"
+            prefWidth="1024.0"
             xmlns="http://javafx.com/javafx/8.0.171">
     <BorderPane AnchorPane.bottomAnchor="0.0"
                 AnchorPane.leftAnchor="0.0"
                 AnchorPane.rightAnchor="0.0"
                 AnchorPane.topAnchor="0.0">
-        <bottom>
-            <BorderPane BorderPane.alignment="CENTER">
-                <bottom>
-                    <JFXProgressBar fx:id="pb_pv_progress"
-                                    prefHeight="16"
-                                    prefWidth="1280.0" />
-                </bottom>
-                <left>
-                    <VBox prefHeight="180.0"
-                          prefWidth="640.0"
-                          BorderPane.alignment="TOP_LEFT"
-                          spacing="4">
-                        <padding>
-                            <Insets bottom="72"
-                                    left="72"
-                                    right="72" />
-                        </padding>
-                        <children>
-                            <Label fx:id="l_pv_name1"
-                                   text="Player1" />
-                            <HBox fx:id="hb_pv_score1"
-                                  prefHeight="100.0"
-                                  prefWidth="200.0"
-                                  spacing="4" />
-                            <HBox fx:id="hb_pv_countdown1"
-                                  prefHeight="100.0"
-                                  prefWidth="200.0"
-                                  spacing="4" />
-                        </children>
-                    </VBox>
-                </left>
-                <right>
-                    <VBox prefHeight="180.0"
-                          prefWidth="640.0"
-                          BorderPane.alignment="TOP_LEFT"
-                          spacing="4">
-                        <padding>
-                            <Insets bottom="72"
-                                    left="72"
-                                    right="72" />
-                        </padding>
-                        <children>
-                            <Label fx:id="l_pv_name2"
-                                   alignment="TOP_RIGHT"
-                                   prefWidth="640.0"
-                                   text="Player2"
-                                   textAlignment="RIGHT" />
-                            <HBox fx:id="hb_pv_score2"
-                                  prefHeight="48.0"
-                                  prefWidth="640.0"
-                                  spacing="4" />
-                            <HBox fx:id="hb_pv_countdown2"
-                                  prefHeight="48.0"
-                                  prefWidth="640.0"
-                                  spacing="4" />
-                        </children>
-                    </VBox>
-                </right>
-            </BorderPane>
-        </bottom>
         <center>
-            <ImageView fx:id="iv_pv_picture"
-                       fitHeight="720.0"
-                       fitWidth="1280.0"
-                       pickOnBounds="true"
-                       preserveRatio="true"
-                       BorderPane.alignment="CENTER" />
+            <AnchorPane prefHeight="400.0"
+                        prefWidth="600.0"
+                        BorderPane.alignment="CENTER">
+                <BorderPane AnchorPane.bottomAnchor="0.0"
+                            AnchorPane.leftAnchor="0.0"
+                            AnchorPane.rightAnchor="0.0"
+                            AnchorPane.topAnchor="0.0">
+                    <center>
+                        <StackPane>
+                            <children>
+                                <ImageView fx:id="iv_pv_picture"
+                                           pickOnBounds="true"
+                                           preserveRatio="true" />
+                                <BorderPane>
+                                    <bottom>
+                                        <HBox alignment="BOTTOM_CENTER"
+                                              prefHeight="100.0"
+                                              prefWidth="200.0"
+                                              BorderPane.alignment="CENTER">
+                                            <children>
+                                                <VBox prefWidth="512.0"
+                                                      spacing="16.0">
+                                                    <padding>
+                                                        <Insets bottom="72"
+                                                                left="72"
+                                                                right="72" />
+                                                    </padding>
+                                                    <children>
+                                                        <Label fx:id="l_pv_name1"
+                                                               text="Player1" />
+                                                        <HBox fx:id="hb_pv_score1"
+                                                              prefHeight="48.0"
+                                                              spacing="4" />
+                                                        <HBox fx:id="hb_pv_countdown1"
+                                                              prefHeight="48.0"
+                                                              spacing="4" />
+                                                    </children>
+                                                </VBox>
+                                                <VBox alignment="TOP_RIGHT"
+                                                      prefWidth="512.0"
+                                                      spacing="4">
+                                                    <padding>
+                                                        <Insets bottom="72"
+                                                                left="72"
+                                                                right="72" />
+                                                    </padding>
+                                                    <children>
+                                                        <Label fx:id="l_pv_name2"
+                                                               alignment="TOP_RIGHT"
+                                                               text="Player2"
+                                                               textAlignment="RIGHT" />
+                                                        <HBox fx:id="hb_pv_score2"
+                                                              prefHeight="48.0"
+                                                              spacing="4" />
+                                                        <HBox fx:id="hb_pv_countdown2"
+                                                              prefHeight="48.0"
+                                                              spacing="4" />
+                                                    </children>
+                                                </VBox>
+                                            </children>
+                                        </HBox>
+                                    </bottom>
+                                </BorderPane>
+                            </children>
+                        </StackPane>
+                    </center>
+                </BorderPane>
+                <BorderPane.margin>
+                    <Insets bottom="16.0" />
+                </BorderPane.margin>
+
+            </AnchorPane>
         </center>
+        <bottom>
+            <AnchorPane BorderPane.alignment="CENTER">
+                <JFXProgressBar fx:id="pb_pv_progress"
+                                prefHeight="16"
+                                AnchorPane.leftAnchor="0.0"
+                                AnchorPane.rightAnchor="0.0" />
+            </AnchorPane>
+        </bottom>
     </BorderPane>
 </AnchorPane>
