--- a/src/main/resources/GameMasterView.fxml
+++ b/src/main/resources/GameMasterView.fxml
@@ -9,95 +9,6 @@
 <BorderPane xmlns:fx="http://javafx.com/fxml/1"
             prefWidth="600.0"
             xmlns="http://javafx.com/javafx/8.0.171">
-    <left>
-        <VBox prefWidth="300.0"
-              spacing="8.0"
-              BorderPane.alignment="CENTER">
-            <children>
-                <Label text="%title_player1" />
-                <VBox spacing="4.0">
-                    <children>
-                        <Label text="%title_name" />
-                        <JFXTextField fx:id="tf_gmv_name1"
-                                      text="Player1">
-                            <VBox.margin>
-                                <Insets right="56.0" />
-                            </VBox.margin>
-                        </JFXTextField>
-                    </children>
-                </VBox>
-                <VBox spacing="4.0">
-                    <children>
-                        <Label text="%title_score" />
-                        <StackPane>
-                            <children>
-
-                                <HBox alignment="CENTER_RIGHT"
-                                      spacing="4.0">
-                                    <children>
-                                        <JFXButton fx:id="btn_gmv_score_up1"
-                                                   prefHeight="24.0"
-                                                   prefWidth="24.0">
-                                            <padding>
-                                                <Insets bottom="0.0"
-                                                        left="0.0"
-                                                        right="0.0"
-                                                        top="0.0" />
-                                            </padding>
-                                            <graphic>
-                                                <Glyph fontFamily="FontAwesome"
-                                                       icon="PLUS" />
-                                            </graphic>
-                                        </JFXButton>
-                                        <JFXButton fx:id="btn_gmv_score_down1"
-                                                   prefHeight="24.0"
-                                                   prefWidth="24.0">
-                                            <padding>
-                                                <Insets bottom="0.0"
-                                                        left="0.0"
-                                                        right="0.0"
-                                                        top="0.0" />
-                                            </padding>
-                                            <graphic>
-                                                <Glyph fontFamily="FontAwesome"
-                                                       icon="MINUS" />
-                                            </graphic>
-                                        </JFXButton>
-                                    </children>
-                                    <StackPane.margin>
-                                        <Insets />
-                                    </StackPane.margin>
-                                </HBox>
-                                <JFXTextField fx:id="tf_gmv_score1"
-                                              text="0">
-                                    <validators>
-                                        <IntegerValidator />
-                                    </validators>
-                                    <StackPane.margin>
-                                        <Insets right="56.0" />
-                                    </StackPane.margin>
-                                </JFXTextField>
-                            </children>
-                        </StackPane>
-                    </children>
-                </VBox>
-            </children>
-            <padding>
-                <Insets bottom="16.0"
-                        left="16.0"
-                        right="16.0"
-                        top="16.0" />
-            </padding>
-        </VBox>
-    </left>
-    <right>
-        <VBox prefWidth="300.0"
-              BorderPane.alignment="CENTER">
-            <children>
-                <Label text="%title_player2" />
-            </children>
-        </VBox>
-    </right>
     <bottom>
         <VBox spacing="8.0"
               BorderPane.alignment="CENTER">
@@ -119,4 +30,168 @@
             </padding>
         </VBox>
     </bottom>
+    <center>
+        <HBox BorderPane.alignment="CENTER">
+            <children>
+                <VBox prefWidth="300.0"
+                      spacing="8.0"
+                      HBox.hgrow="ALWAYS">
+                    <children>
+                        <Label text="%title_player1" />
+                        <VBox spacing="4.0">
+                            <children>
+                                <Label text="%title_name" />
+                                <JFXTextField fx:id="tf_gmv_name1"
+                                              text="Player1">
+                                    <VBox.margin>
+                                        <Insets right="56.0" />
+                                    </VBox.margin>
+                                </JFXTextField>
+                            </children>
+                        </VBox>
+                        <VBox spacing="4.0">
+                            <children>
+                                <Label text="%title_score" />
+                                <StackPane>
+                                    <children>
+
+                                        <HBox alignment="CENTER_RIGHT"
+                                              spacing="4.0">
+                                            <children>
+                                                <JFXButton fx:id="btn_gmv_score_up1"
+                                                           prefHeight="24.0"
+                                                           prefWidth="24.0">
+                                                    <padding>
+                                                        <Insets bottom="0.0"
+                                                                left="0.0"
+                                                                right="0.0"
+                                                                top="0.0" />
+                                                    </padding>
+                                                    <graphic>
+                                                        <Glyph fontFamily="FontAwesome"
+                                                               icon="PLUS" />
+                                                    </graphic>
+                                                </JFXButton>
+                                                <JFXButton fx:id="btn_gmv_score_down1"
+                                                           prefHeight="24.0"
+                                                           prefWidth="24.0">
+                                                    <padding>
+                                                        <Insets bottom="0.0"
+                                                                left="0.0"
+                                                                right="0.0"
+                                                                top="0.0" />
+                                                    </padding>
+                                                    <graphic>
+                                                        <Glyph fontFamily="FontAwesome"
+                                                               icon="MINUS" />
+                                                    </graphic>
+                                                </JFXButton>
+                                            </children>
+                                            <StackPane.margin>
+                                                <Insets />
+                                            </StackPane.margin>
+                                        </HBox>
+                                        <JFXTextField fx:id="tf_gmv_score1"
+                                                      text="0">
+                                            <validators>
+                                                <IntegerValidator />
+                                            </validators>
+                                            <StackPane.margin>
+                                                <Insets right="56.0" />
+                                            </StackPane.margin>
+                                        </JFXTextField>
+                                    </children>
+                                </StackPane>
+                            </children>
+                        </VBox>
+                    </children>
+                    <padding>
+                        <Insets bottom="16.0"
+                                left="16.0"
+                                right="16.0"
+                                top="16.0" />
+                    </padding>
+                </VBox>
+                <VBox prefWidth="300.0"
+                      spacing="8.0"
+                      HBox.hgrow="ALWAYS">
+                    <children>
+                        <Label text="%title_player2" />
+                        <VBox spacing="4.0">
+                            <children>
+                                <Label text="%title_name" />
+                                <JFXTextField fx:id="tf_gmv_name2"
+                                              text="Player2">
+                                    <VBox.margin>
+                                        <Insets right="56.0" />
+                                    </VBox.margin>
+                                </JFXTextField>
+                            </children>
+                        </VBox>
+                        <VBox spacing="4.0">
+                            <children>
+                                <Label text="%title_score" />
+                                <StackPane>
+                                    <children>
+
+                                        <HBox alignment="CENTER_RIGHT"
+                                              spacing="4.0">
+                                            <children>
+                                                <JFXButton fx:id="btn_gmv_score_up2"
+                                                           prefHeight="24.0"
+                                                           prefWidth="24.0">
+                                                    <padding>
+                                                        <Insets bottom="0.0"
+                                                                left="0.0"
+                                                                right="0.0"
+                                                                top="0.0" />
+                                                    </padding>
+                                                    <graphic>
+                                                        <Glyph fontFamily="FontAwesome"
+                                                               icon="PLUS" />
+                                                    </graphic>
+                                                </JFXButton>
+                                                <JFXButton fx:id="btn_gmv_score_down2"
+                                                           prefHeight="24.0"
+                                                           prefWidth="24.0">
+                                                    <padding>
+                                                        <Insets bottom="0.0"
+                                                                left="0.0"
+                                                                right="0.0"
+                                                                top="0.0" />
+                                                    </padding>
+                                                    <graphic>
+                                                        <Glyph fontFamily="FontAwesome"
+                                                               icon="MINUS" />
+                                                    </graphic>
+                                                </JFXButton>
+                                            </children>
+                                            <StackPane.margin>
+                                                <Insets />
+                                            </StackPane.margin>
+                                        </HBox>
+                                        <JFXTextField fx:id="tf_gmv_score2"
+                                                      text="0">
+                                            <validators>
+                                                <IntegerValidator />
+                                            </validators>
+                                            <StackPane.margin>
+                                                <Insets right="56.0" />
+                                            </StackPane.margin>
+                                        </JFXTextField>
+                                    </children>
+                                </StackPane>
+                            </children>
+                        </VBox>
+                    </children>
+                    <padding>
+                        <Insets bottom="16.0"
+                                left="16.0"
+                                right="16.0"
+                                top="16.0" />
+                    </padding>
+                </VBox>
+            </children>
+        </HBox>
+    </center>
 </BorderPane>
