Presentation: show unblur progress

--- a/src/main/resources/GameMasterView.fxml
+++ b/src/main/resources/GameMasterView.fxml
@@ -17,7 +17,8 @@
                 <HBox prefWidth="200.0">
                     <children>
                         <JFXButton text="Choose picture" />
-                        <JFXButton text="Play/Pause" />
+                        <JFXButton fx:id="btn_gmv_start"
+                                   text="%action_start" />
                         <JFXButton text="Reveal" />
                     </children>
                 </HBox>
